samples/_failures_safe/1761369671_542183_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75afc84e.c: In function ‘main’:
./samples/SAFE/__tmp_75afc84e.c:158:5: error: expected expression at end of input
  158 |     int edges =
      |     ^~~
./samples/SAFE/__tmp_75afc84e.c:158:5: error: expected declaration or statement at end of input
